# revaer

./: .deployment-info  404.html  Cargo.toml  Dockerfile  ERD_INDEXERS_CHECKLIST.md  MEDIA_TRANSCODING.md  index.html  justfile  phase-one-remaining-spec.html  phase-one-roadmap.html  print.html  release-checklist.html  runbook.html  searcher-09f2665d.js  sonar-project.properties  toc-0de91650.js  toc-1e490410.js  toc.html
.github/instructions/: devops.instructions.md  revaer-ui.instructions.md  rust.instructions.md  sonarqube_mcp.instructions.md
.github/workflows/: pr.yml  sonar.yml
adr/: 001-configuration-revisioning.html  002-setup-token-lifecycle.html  003-libtorrent-session-runner.html  004-phase-one-delivery.html  005-fsops-pipeline.html  006-api-cli-contract.html  007-security-posture.html  008-phase-one-remaining-task.html  009-fsops-permission-hardening.html  010-agent-compliance-sweep.html  011-coverage-hardening-phase-two.html  012-agent-compliance-refresh.html  013-runtime-persistence.html  014-data-access-layer.html  015-agent-compliance-hardening.html  016-libtorrent-restoration.html  017-sqlx-named-bind.html  018-retire-testcontainers.html  019-advisory-rustsec-2024-0370.html  020-torrent-engine-precursors.html  021-torrent-precursor-enforcement.html  022-torrent-settings-parity.html  023-tracker-config-wiring.html  024-seeding-stop-criteria.html  025-seed-mode-add-as-complete.html  026-queue-auto-managed-and-pex.html  027-choking-and-super-seeding.html  028-qbittorrent-parity-and-tracker-tls.html  029-torrent-authoring-labels-and-metadata.html  030-migration-consolidation.html  031-ui-asset-sync.html  032-torrent-ffi-audit-closeout.html  033-ui-sse-auth-setup.html  034-ui-sse-store-apiclient.html  035-advisory-rustsec-2021-0065.html  036-asset-sync-test-stability.html  037-ui-row-slices-system-rates.html  038-ui-api-models-filters-paging.html  039-ui-store-api-rate-limit.html  040-ui-labels-policy.html  (+278 more)
api/: index.html  openapi-gaps.html  openapi.html
api/guides/: indexer-migration-rollback.html
crates/revaer-app/: Cargo.toml
crates/revaer-app/src/: bootstrap.rs  import_job_runtime.rs  lib.rs  media.rs
crates/revaer-app/tests/: bootstrap.rs
crates/revaer-cli/: Cargo.toml
crates/revaer-cli/src/: cli.rs
crates/revaer-cli/src/commands/: setup.rs
crates/revaer-media-core/: Cargo.toml
crates/revaer-media-core/src/: lib.rs
crates/revaer-media-core/src/classify/: mod.rs
crates/revaer-media-core/src/compile/: mod.rs
crates/revaer-media-core/src/compliance/: mod.rs
crates/revaer-media-core/src/diff/: mod.rs
crates/revaer-media-core/src/explain/: mod.rs
crates/revaer-media-core/src/model/: mod.rs
crates/revaer-media-core/src/normalize/: mod.rs
crates/revaer-media-core/src/plan/: mod.rs
crates/revaer-media-core/src/verify/: mod.rs
crates/revaer-media-runtime/: Cargo.toml
crates/revaer-media-runtime/src/: lib.rs
crates/revaer-media-runtime/src/capabilities/: mod.rs
crates/revaer-media-runtime/src/execute/: mod.rs
crates/revaer-media-runtime/src/inspect/: mod.rs
crates/revaer-media-runtime/src/jobs/: mod.rs
crates/revaer-media-runtime/src/workspace/: mod.rs
docs/: SUMMARY.md
docs/adr/: 174-indexer-import-jobs-api.md  315-indexer-import-job-runtime-worker.md  316-import-runtime-gap-closure-followup.md  317-media-transcoding-foundation-slice-1.md  318-media-transcoding-persistence-foundation-slice-6.md  319-media-transcoding-runtime-facade-slice-8-foundation.md  320-media-transcoding-api-surface-foundation-slice-10.md  321-media-transcoding-yaml-import-export-foundation-slice-7.md  322-media-transcoding-ffprobe-inspection-adapter-slice-8.md  323-media-transcoding-inspect-to-plan-preflight-slice-8.md  324-media-transcoding-workspace-max-enforcement-slice-12.md  325-media-transcoding-capability-gated-execution-steps-slice-8.md  326-media-transcoding-planned-job-summary-slice-4.md  327-media-transcoding-preflight-report-runtime-slice-8-12.md  328-media-transcoding-codec-capability-normalization-slice-8.md  329-media-transcoding-workspace-capacity-report-slice-12.md  330-media-transcoding-preflight-timeline-records-slice-4-8.md  331-media-transcoding-preflight-error-classification-slice-4-8.md  332-media-transcoding-preflight-failure-timeline-projection-slice-4-8.md  333-media-transcoding-preflight-capacity-report-integration-slice-12.md  334-media-transcoding-preflight-success-timeline-builder-slice-4-8.md  335-media-transcoding-preflight-stage-code-enrichment-slice-4-8.md  336-media-transcoding-preflight-failure-report-helper-slice-4-8.md  337-media-transcoding-preflight-evaluation-outcome-api-slice-4-8.md  338-media-transcoding-preflight-evaluation-ready-helper-slice-4-8.md  339-media-transcoding-preflight-evaluation-accessors-slice-4-8.md  340-media-transcoding-preflight-evaluation-failure-accessors-slice-4-8.md  341-media-transcoding-preflight-evaluation-timeline-accessor-slice-4-8.md  342-media-pr-feedback-alignment-pass.md  343-media-stream-kind-aware-recode-planning-slice-4-14.md  344-media-stream-removal-planning-remux-correction-slice-4-14.md  345-media-execution-backup-and-atomic-replacement-steps-slice-14.md  346-media-preflight-backup-path-step-sequencing-slice-14.md  (+61 more)
llm/: manifest.json  summaries.json
platform/: api.html  cli.html  configuration.html  native-tests.html  torrent-flows.html
scripts/: media-compliance-guardrails.sh
tests/: package-lock.json  playwright.config.ts
ui/: flows.html  index.html
(+59 files in other folders)
