[package]
name = "revaer-app"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

publish = false
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
revaer-api = { path = "../revaer-api" }
revaer-config = { path = "../revaer-config" }
revaer-fsops = { path = "../revaer-fsops" }
revaer-telemetry = { path = "../revaer-telemetry", features = ["otel"] }
revaer-torrent-core = { path = "../revaer-torrent-core" }
revaer-torrent-libt = { path = "../revaer-torrent-libt", default-features = false }
revaer-events = { path = "../revaer-events" }
revaer-media-core = { path = "../revaer-media-core" }
revaer-media-runtime = { path = "../revaer-media-runtime" }
revaer-runtime = { path = "../revaer-runtime" }
revaer-data = { path = "../revaer-data" }
uuid.workspace = true
async-trait.workspace = true
chrono.workspace = true
tokio-stream.workspace = true
serde_json.workspace = true
serde.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip"] }
serde_yaml = "0.9"

[dev-dependencies]
anyhow.workspace = true
tempfile = "3.10"
revaer-test-support = { path = "../revaer-test-support" }
sqlx.workspace = true

[features]
default = ["libtorrent"]
libtorrent = ["revaer-torrent-libt/libtorrent"]
